# CiviC

./: .gitmodules  Readme  gen_runfct.sh  get_sunshine.sh  install_spoofax.sh  setup.sh  setup_spoofax.sh
spoofax-workspace/: .gitignore
spoofax-workspace/My-Languages/CIVIC-definition/: Makefile  summary  summary.py
spoofax-workspace/My-Languages/CIVIC-definition/CIVIC-Editor/: README.md  decls.json  metaborg.yaml  pom.xml
spoofax-workspace/My-Languages/CIVIC-definition/CIVIC-Editor/editor/: Main.esv  Syntax.esv
spoofax-workspace/My-Languages/CIVIC-definition/CIVIC-Editor/syntax/: CIVIC.sdf3  Stratego-CIVIC.sdf
spoofax-workspace/My-Languages/CIVIC-definition/CIVIC-Editor/trans/: Stratego-CIVIC.tbl  civic.str  generate.str  outline.str  pp.str
spoofax-workspace/My-Languages/CIVIC-definition/CIVIC-Runfct/: .gitignore  CIVIC-Runfct.cabal  Main.hs
spoofax-workspace/My-Languages/CIVIC-definition/CIVIC-Runfct/Funcons/CIVIC/CIVICFuncons/: CIVICFuncons.hs
spoofax-workspace/My-Languages/CIVIC-definition/CIVIC-Runfct/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
spoofax-workspace/My-Languages/CIVIC-definition/CIVIC-Tests/: .gitignore  .project  Dockerfile  Makefile  chop.py  compare.py  helper_functions.py  regen-funcons.sh  run-nondeterministic (copy 1).py  run-nondeterministic.py  run-tests.sh  run_g++_latest.sh
spoofax-workspace/My-Languages/CIVIC-definition/CIVIC-cbs/: CIVIC.sty  Funcons-beta  Unstable-Funcons-beta
(+645 files in other folders)
